# ghostkv-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESULTS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md  model_validation.md
.github/workflows/: ci.yml
data/: README.md  prompts.txt
data/real_attention/: gpt2_1024_layer0_head0.npz  gpt2_1024_layer0_head4.npz  gpt2_1024_layer0_head8.npz  gpt2_1024_layer4_head0.npz  gpt2_1024_layer4_head4.npz  gpt2_1024_layer4_head8.npz  gpt2_1024_layer8_head0.npz  gpt2_1024_layer8_head4.npz  gpt2_1024_layer8_head8.npz  (+9 more)
docs/: algorithm_notes.md  false_elimination_frontier.md  ghostkv_overview.md  github_labels.md  limitations.md  patent_notice.md  real_attention_validation.md  release_checklist.md  release_commands.md  roadmap.md  v0.1_release_notes.md
experiments/: __init__.py  analyze_modern_attention.py  bandwidth_model_demo.py  capture_real_attention.py  elimination_tradeoff.py  false_elimination_frontier.py  generate_results.py  hierarchical_elimination.py  real_attention_validation.py  sketch_quality_audit.py  synthetic_decode_simulation.py  train_learned_sketch.py
results/: README.md  bandwidth_sweep.csv  elimination_tradeoff.csv  headwise_metrics.csv  hierarchical_results.csv  real_attention_summary.md  real_attention_validation.csv  sketch_quality.csv
scripts/: check_env.py
tests/: conftest.py  test_bandwidth.py  test_bounds.py  test_frontier.py  test_generate_results.py  test_hf_capture.py  test_hierarchical.py  test_lifecycle.py  test_plotting.py  test_real_attention_metrics.py  test_sketches.py
(+25 files in other folders)
