[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostkv-lab"
version = "0.1.0"
description = "A research simulator for query-time bounded elimination of reconstructable KV-cache witnesses in long-context transformer inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Manish KL", email = "manishklach@gmail.com" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "psutil>=5.9",
  "scipy>=1.11",
  "torch>=2.2",
  "transformers>=4.57",
  "huggingface_hub>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
